Menus padronizados e alguns links corrigidos. Incluídas páginas de doação e parceiros.

--- a/pethelper/index.html
+++ b/pethelper/index.html
@@ -9,11 +9,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-<<<<<<< HEAD
+
     <title>Pet Helper</title>
-=======
-    <title>PET HELPER - Maceió - Alagoas</title>
->>>>>>> 7b7344c867238ec2b8bbbc48893e282fc2ed0366
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -52,68 +49,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">Sobre</a>
+                        <a href="about.html">Sobre o Pet Helper</a>
                     </li>
                     <li>
                         <a href="services.html">Doar</a>
                     </li>
+                    <li class="active">
+                        <a href="portfolio-2-col.html">Adote!</a>
+                    </li>
                     <li>
-                        <a href="contact.html">Adote</a>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pets <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="portfolio-1-col.html">1 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-2-col.html">2 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-3-col.html">3 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-4-col.html">4 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-item.html">Single Portfolio Item</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <!--<li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="blog-home-1.html">Blog Home 1</a>
-                            </li>
-                            <li>
-                                <a href="blog-home-2.html">Blog Home 2</a>
-                            </li>
-                            <li>
-                                <a href="blog-post.html">Blog Post</a>
-                            </li>
-                        </ul>
-                    </li>-->
-                    <!--<li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Parceiros <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="full-width.html">Full Width Page</a>
-                            </li>
-                            <li>
-                                <a href="sidebar.html">Sidebar Page</a>
-                            </li>
-                            <li>
-                                <a href="faq.html">FAQ</a>
-                            </li>
-                            <li>
-                                <a href="404.html">404</a>
-                            </li>
-                            <li>
-                                <a href="pricing.html">Pricing Table</a>
-                            </li>-->
-                             <li>
-                        <a href="contact.html">Parceiros</a>
+                        <a href="parceiros.html">Parceiros</a>
                     </li>
                      <li>
                         <a href="contact.html">Contato</a>
@@ -184,7 +129,7 @@
                     </div>
                     <div class="panel-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
+                        <a href="#" class="btn btn-default">Saiba Mais</a>
                     </div>
                 </div>
             </div>
@@ -195,7 +140,7 @@
                     </div>
                     <div class="panel-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
+                        <a href="#" class="btn btn-default">Saiba Mais</a>
                     </div>
                 </div>
             </div>
@@ -206,7 +151,7 @@
                     </div>
                     <div class="panel-body">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
+                        <a href="#" class="btn btn-default">Saiba Mais</a>
                     </div>
                 </div>
             </div>
@@ -219,75 +164,39 @@
                 <h2 class="page-header">Portfolio Heading</h2>
             </div>
             <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                <a href="portfolio-2-col.html">
+                    <img class="img-responsive img-portfolio img-hover" src="https://scontent-gru1-1.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/12065959_461055100762415_474056868069567776_n.jpg?oh=e4e19223a6208d031e274e27e1d8a44a&oe=56B261E7" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                <a href="portfolio-2-col.html">
+                    <img class="img-responsive img-portfolio img-hover" src="https://scontent-gru1-1.xx.fbcdn.net/hphotos-xaf1/v/t1.0-9/12004007_461055047429087_8764331877346828572_n.jpg?oh=52472d2501f16c07c4107915208e9e64&oe=5686D071" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                <a href="portfolio-2-col.html">
+                    <img class="img-responsive img-portfolio img-hover" src="https://scontent-gru1-1.xx.fbcdn.net/hphotos-xfp1/v/t1.0-9/s851x315/12190017_461055090762416_3564874528169338140_n.jpg?oh=fef3862bbdd7ab631059aff4263f2804&oe=56C91484" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                <a href="portfolio-2-col.html">
+                    <img class="img-responsive img-portfolio img-hover" src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xla1/v/t1.0-9/12042682_461055050762420_4627772893155368854_n.jpg?oh=7a4674b0ee3e7cdfc18b3aca6611bc28&oe=56C19B7D&__gda__=1454814928_af8636bc883d0c6a0d186c14d08b27b5" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                <a href="portfolio-2-col.html">
+                    <img class="img-responsive img-portfolio img-hover" src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xft1/v/t1.0-9/12191555_461055087429083_8526545001357331503_n.jpg?oh=ccbe59ecc13427488696d8a705cbfd06&oe=56C97B61&__gda__=1455862763_25ece358879f34e5c9e3291a57cd2bf4" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                <a href="portfolio-2-col.html">
+                    <img class="img-responsive img-portfolio img-hover" src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xtp1/v/t1.0-9/12109161_461055054095753_6740018890406164028_n.jpg?oh=b921c9685529b05bc46d0a785579f433&oe=56BCBD88&__gda__=1455306942_2662747d61ce5e409eff3756e35a2575" alt="">
                 </a>
             </div>
         </div>
         <!-- /.row -->
 
-        <!-- Features Section -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">Modern Business Features</h2>
-            </div>
-            <div class="col-md-6">
-                <p>The Modern Business template by Start Bootstrap includes:</p>
-                <ul>
-                    <li><strong>Bootstrap v3.2.0</strong>
-                    </li>
-                    <li>jQuery v1.11.0</li>
-                    <li>Font Awesome v4.1.0</li>
-                    <li>Working PHP contact form with validation</li>
-                    <li>Unstyled page elements for easy customization</li>
-                    <li>17 HTML pages</li>
-                </ul>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
-            </div>
-            <div class="col-md-6">
-                <img class="img-responsive" src="http://placehold.it/700x450" alt="">
-            </div>
-        </div>
         <!-- /.row -->
-
-        <hr>
-
-        <!-- Call to Action Section -->
-        <div class="well">
-            <div class="row">
-                <div class="col-md-8">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
-                </div>
-                <div class="col-md-4">
-                    <a class="btn btn-lg btn-default btn-block" href="#">Call to Action</a>
-                </div>
-            </div>
-        </div>
 
         <hr>
 
