--- a/pethelper/portfolio-2-col.html
+++ b/pethelper/portfolio-2-col.html
@@ -42,7 +42,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+                <a class="navbar-brand" href="index.html">PetHelper</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -51,72 +51,26 @@
                         <a href="about.html">Sobre o Pet Helper</a>
                     </li>
                     <li>
+                        <a href="services.html">Doar</a>
+                    </li>
                     <li class="active">
                         <a href="portfolio-2-col.html">Adote!</a>
                     </li>
                     <li>
+                        <a href="parceiros.html">Parceiros</a>
+                    </li>
+                     <li>
                         <a href="contact.html">Contato</a>
                     </li>
-            <!--        <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="portfolio-1-col.html">1 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-2-col.html">2 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-3-col.html">3 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-4-col.html">4 Column Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="portfolio-item.html">Single Portfolio Item</a>
-                            </li>
                         </ul>
                     </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="blog-home-1.html">Blog Home 1</a>
-                            </li>
-                            <li>
-                                <a href="blog-home-2.html">Blog Home 2</a>
-                            </li>
-                            <li>
-                                <a href="blog-post.html">Blog Post</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other Pages <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="full-width.html">Full Width Page</a>
-                            </li>
-                            <li>
-                                <a href="sidebar.html">Sidebar Page</a>
-                            </li>
-                            <li>
-                                <a href="faq.html">FAQ</a>
-                            </li>
-                            <li>
-                                <a href="404.html">404</a>
-                            </li>
-                            <li>
-                                <a href="pricing.html">Pricing Table</a>
-                            </li>
-                        </ul>
-                    </li>-->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
     </nav>
+
 
     <!-- Page Content -->
     <div class="container">
@@ -148,7 +102,7 @@
                 <p>Lindo cachorro da raça Vira.</p>
             </div>
             <div class="col-md-6 img-portfolio">
-                <a href="portfolio-item.html">
+                <a href="#">
                     <img class="img-responsive img-hover" src="https://scontent-gru1-1.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/12065959_461055100762415_474056868069567776_n.jpg?oh=e4e19223a6208d031e274e27e1d8a44a&oe=56B261E7" alt="">
                 </a>
                 <h3>
@@ -162,20 +116,20 @@
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-6 img-portfolio">
-                <a href="portfolio-item.html">
+                <a href="#">
                     <img class="img-responsive img-hover" src="https://scontent-gru1-1.xx.fbcdn.net/hphotos-xaf1/v/t1.0-9/12004007_461055047429087_8764331877346828572_n.jpg?oh=52472d2501f16c07c4107915208e9e64&oe=5686D071" alt="">
                 </a>
                 <h3>
-                    <a href="portfolio-item.html">Denguinhop</a>
+                    <a href="#">Denguinhop</a>
                 </h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
             <div class="col-md-6 img-portfolio">
-                <a href="portfolio-item.html">
+                <a href="#">
                     <img class="img-responsive img-hover" src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xtp1/v/t1.0-9/12109161_461055054095753_6740018890406164028_n.jpg?oh=b921c9685529b05bc46d0a785579f433&oe=56BCBD88&__gda__=1455306942_2662747d61ce5e409eff3756e35a2575" alt="">
                 </a>
                 <h3>
-                    <a href="portfolio-item.html">Project Four</a>
+                    <a href="#">Project Four</a>
                 </h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
@@ -185,20 +139,20 @@
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-6 img-portfolio">
-                <a href="portfolio-item.html">
+                <a href="#">
                     <img class="img-responsive img-hover" src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xla1/v/t1.0-9/12042682_461055050762420_4627772893155368854_n.jpg?oh=7a4674b0ee3e7cdfc18b3aca6611bc28&oe=56C19B7D&__gda__=1454814928_af8636bc883d0c6a0d186c14d08b27b5" alt="">
                 </a>
                 <h3>
-                    <a href="portfolio-item.html">Project Five</a>
+                    <a href="#">Project Five</a>
                 </h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
             <div class="col-md-6 img-portfolio">
-                <a href="portfolio-item.html">
+                <a href="#">
                     <img class="img-responsive img-hover" src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xft1/v/t1.0-9/12191555_461055087429083_8526545001357331503_n.jpg?oh=ccbe59ecc13427488696d8a705cbfd06&oe=56C97B61&__gda__=1455862763_25ece358879f34e5c9e3291a57cd2bf4" alt="">
                 </a>
                 <h3>
-                    <a href="portfolio-item.html">Project Six</a>
+                    <a href="#">Project Six</a>
                 </h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
             </div>
