--- a/pethelper/sidebar.html
+++ b/pethelper/sidebar.html
@@ -80,7 +80,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="blog-home-1.html">Blog Home 1</a>
+                                <a href="parceiros.html">Blog Home 1</a>
                             </li>
                             <li>
                                 <a href="blog-home-2.html">Blog Home 2</a>
@@ -149,7 +149,7 @@
                     <a href="portfolio-3-col.html" class="list-group-item">3 Column Portfolio</a>
                     <a href="portfolio-4-col.html" class="list-group-item">4 Column Portfolio</a>
                     <a href="portfolio-item.html" class="list-group-item">Single Portfolio Item</a>
-                    <a href="blog-home-1.html" class="list-group-item">Blog Home 1</a>
+                    <a href="parceiros.html" class="list-group-item">Blog Home 1</a>
                     <a href="blog-home-2.html" class="list-group-item">Blog Home 2</a>
                     <a href="blog-post.html" class="list-group-item">Blog Post</a>
                     <a href="full-width.html" class="list-group-item">Full Width Page</a>
