Correção da opção ativa no menu (classe) e inclusão de texto das opções no index.html

--- a/pethelper/index.html
+++ b/pethelper/index.html
@@ -54,7 +54,7 @@
                     <li>
                         <a href="services.html">Doar</a>
                     </li>
-                    <li class="active">
+                    <li>
                         <a href="portfolio-2-col.html">Adote!</a>
                     </li>
                     <li>
@@ -128,8 +128,8 @@
                         <h4></i> ADOTE</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Saiba Mais</a>
+                        <p>Mostre seu carinho e cuidado dando um lar um de nossos bichinhos. </p>
+                        <a href="portfolio-2-col.html" class="btn btn-default">Saiba Mais</a>
                     </div>
                 </div>
             </div>
@@ -139,8 +139,8 @@
                         <h4>DOE</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Saiba Mais</a>
+                        <p>Você também pode ajudar as instituições doando valores a partir de R$ 5,00.</p>
+                        <a href="services.html" class="btn btn-default">Saiba Mais</a>
                     </div>
                 </div>
             </div>
@@ -150,8 +150,8 @@
                         <h4></i> DIVULGUE</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Saiba Mais</a>
+                        <p>Siga o Pet Helper nas redes sociais e divulgue entre os amigos!</p>
+                        <a href="https://www.facebook.com/ajudepethelper" class="btn btn-default">Saiba Mais</a>
                     </div>
                 </div>
             </div>
