--- a/pethelper/services.html
+++ b/pethelper/services.html
@@ -50,10 +50,10 @@
                     <li>
                         <a href="about.html">Sobre o Pet Helper</a>
                     </li>
-                    <li>
+                    <li class="active">
                         <a href="services.html">Doar</a>
                     </li>
-                    <li class="active">
+                    <li>
                         <a href="portfolio-2-col.html">Adote!</a>
                     </li>
                     <li>
@@ -79,7 +79,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">Doar
-                    <small>Ajude a uma OMG</small>
+                    <small>Ajude a uma ONG</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
