--- a/pethelper/portfolio-2-col.html
+++ b/pethelper/portfolio-2-col.html
@@ -108,7 +108,7 @@
                 <h3>
                     <a href="portfolio-item.html">Docinho</a>
                 </h3>
-                <p>Quero wdkwidhpwd</p>
+                <p>Venha ser meu amiguinho...</p>
             </div>
         </div>
         <!-- /.row -->
@@ -120,18 +120,18 @@
                     <img class="img-responsive img-hover" src="https://scontent-gru1-1.xx.fbcdn.net/hphotos-xaf1/v/t1.0-9/12004007_461055047429087_8764331877346828572_n.jpg?oh=52472d2501f16c07c4107915208e9e64&oe=5686D071" alt="">
                 </a>
                 <h3>
-                    <a href="#">Denguinhop</a>
+                    <a href="#">Fred</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p>Fui encontrado no lixão e estou a procura de um dono.</p>
             </div>
             <div class="col-md-6 img-portfolio">
                 <a href="#">
                     <img class="img-responsive img-hover" src="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xtp1/v/t1.0-9/12109161_461055054095753_6740018890406164028_n.jpg?oh=b921c9685529b05bc46d0a785579f433&oe=56BCBD88&__gda__=1455306942_2662747d61ce5e409eff3756e35a2575" alt="">
                 </a>
                 <h3>
-                    <a href="#">Project Four</a>
+                    <a href="#">Nhoque</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p>Fui muito maltratado pelo meu ex dono.</p>
             </div>
         </div>
         <!-- /.row -->
@@ -143,18 +143,18 @@
                     <img class="img-responsive img-hover" src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xla1/v/t1.0-9/12042682_461055050762420_4627772893155368854_n.jpg?oh=7a4674b0ee3e7cdfc18b3aca6611bc28&oe=56C19B7D&__gda__=1454814928_af8636bc883d0c6a0d186c14d08b27b5" alt="">
                 </a>
                 <h3>
-                    <a href="#">Project Five</a>
+                    <a href="#">Bolinha</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p>Sou protetor e adoro um bebê.</p>
             </div>
             <div class="col-md-6 img-portfolio">
                 <a href="#">
                     <img class="img-responsive img-hover" src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xft1/v/t1.0-9/12191555_461055087429083_8526545001357331503_n.jpg?oh=ccbe59ecc13427488696d8a705cbfd06&oe=56C97B61&__gda__=1455862763_25ece358879f34e5c9e3291a57cd2bf4" alt="">
                 </a>
                 <h3>
-                    <a href="#">Project Six</a>
+                    <a href="#">Rex</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p>Estou a procura de donos amáveis, pois sou muito amoroso.</p>
             </div>
         </div>
         <!-- /.row -->
