Mudanças no contato
Mudanca feita no mapa do google e nos links

--- a/pethelper/portfolio-item.html
+++ b/pethelper/portfolio-item.html
@@ -81,7 +81,7 @@
                     
                 </h1>
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
+                    <li><a href="index.html">Adote</a>
                     </li>
                     <li class="active">Totó</li>
                 </ol>
@@ -173,7 +173,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Pet Helper 2015</p>
                 </div>
             </div>
         </footer>
